--- a/composer.json
+++ b/composer.json
@@ -14,15 +14,29 @@
     },
     "require": {
         "php": ">=7.1",
-        "symfony/symfony": "^3.4",
+        "symfony/http-foundation": "^4.2",
+        "symfony/security": "^4.2",
+        "symfony/translation": "^4.2",
+        "symfony/validator": "^4.2",
+        "symfony/form": "^4.2",
+        "symfony/http-kernel": "^4.2",
+        "symfony/config": "^4.2",
+        "symfony/dependency-injection": "^4.2",
+        "symfony/console": "^4.2",
+        "symfony/event-dispatcher": "^4.2",
+        "symfony/filesystem": "^4.2",
+        "symfony/routing": "^4.2",
+        "symfony/options-resolver": "^4.2",
+        "symfony/asset": "^4.2",
+        "symfony/yaml": "^4.2",
         "jms/translation-bundle": "^1.3.2",
-        "ezsystems/ezpublish-kernel": "^7.5@dev",
-        "ezsystems/repository-forms": "^2.5@dev",
-        "ezsystems/ezplatform-admin-ui-modules": "^1.5@dev",
-        "ezsystems/ez-support-tools": "^1.0@dev",
-        "ezsystems/ezplatform-design-engine": "^2.0@dev",
-        "ezsystems/ezplatform-user": "^1.0@dev",
-        "ezsystems/ezplatform-richtext": "^1.1@dev",
+        "ezsystems/ezpublish-kernel": "^8.0",
+        "ezsystems/ezplatform-design-engine": "^3.0",
+        "ezsystems/ezplatform-richtext": "^2.0",
+        "ezsystems/ez-support-tools": "^2.0",
+        "ezsystems/repository-forms": "^3.0",
+        "ezsystems/ezplatform-admin-ui-modules": "^2.0",
+        "ezsystems/ezplatform-user": "^2.0",
         "white-october/pagerfanta-bundle": "^1.1",
         "knplabs/knp-menu-bundle": "^2.1",
         "mck89/peast": "^1.8",
