--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,40 @@
     "autoload-dev": {
         "psr-4": { "EzSystems\\EzPlatformAdminUi\\Tests\\": "src/lib/Tests" }
     },
+    "repositories": [
+        {
+          "type": "vcs",
+          "url": "../ezpublish-kernel"
+        },
+        {
+          "type": "vcs",
+          "url": "../ezplatform-user"
+        },
+        {
+          "type": "vcs",
+          "url": "../ezplatform-design-engine"
+        },
+        {
+          "type": "vcs",
+          "url": "../repository-forms"
+        },
+        {
+          "type": "vcs",
+          "url": "../ezplatform-admin-ui-modules"
+        },
+        {
+          "type": "vcs",
+          "url": "../ezplatform-richtext"
+        },
+        {
+          "type": "vcs",
+          "url": "../doctrine-dbal-schema"
+        },
+        {
+          "type": "vcs",
+          "url": "../ez-support-tools"
+        }
+    ],
     "require": {
         "php": ">=7.1",
         "symfony/http-foundation": "^4.2",
@@ -30,13 +64,13 @@
         "symfony/asset": "^4.2",
         "symfony/yaml": "^4.2",
         "jms/translation-bundle": "^1.3.2",
-        "ezsystems/ezpublish-kernel": "^8.0",
-        "ezsystems/ezplatform-design-engine": "^3.0",
-        "ezsystems/ezplatform-richtext": "^2.0",
-        "ezsystems/ez-support-tools": "^2.0",
-        "ezsystems/repository-forms": "^3.0",
-        "ezsystems/ezplatform-admin-ui-modules": "^2.0",
-        "ezsystems/ezplatform-user": "^2.0",
+        "ezsystems/ezpublish-kernel": "dev-symfony4 as 8.0.0",
+        "ezsystems/ezplatform-design-engine": "dev-symfony4 as 3.0.0",
+        "ezsystems/ezplatform-richtext": "dev-symfony4 as 2.0.0",
+        "ezsystems/ez-support-tools": "dev-symfony4 as 2.0.0",
+        "ezsystems/repository-forms": "dev-symfony4 as 3.0.0",
+        "ezsystems/ezplatform-admin-ui-modules": "dev-symfony4 as 2.0.0",
+        "ezsystems/ezplatform-user": "dev-symfony4 as 2.0.0",
         "white-october/pagerfanta-bundle": "^1.1",
         "knplabs/knp-menu-bundle": "^2.1",
         "mck89/peast": "^1.8",
@@ -54,8 +88,8 @@
     "extra": {
         "_ezplatform_branch_for_behat_tests": "master",
         "branch-alias": {
-            "dev-tmp_ci_branch": "1.5.x-dev",
-            "dev-master": "1.5.x-dev"
+          "dev-tmp_ci_branch": "1.5.x-dev",
+          "dev-master": "1.5.x-dev"
         }
     }
 }
